chore: Performed code review and implement findings
